# heroku_corona_cases

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  failed.txt  pylint.rc  pyproject.toml  requirements.txt  run.py  start.sh  tasks.py
.circleci/: config.yml
corona_stats/: __init__.py  app.py  caching_decorator.py  config.py  data.py  plots.py  routes.py
corona_stats/data/: canada_data.py  corona_data_by_region.py  corona_data_versus_time.py  country.py  numerical_range.py  test_numerical_range.py  us_data.py
corona_stats/data/canada/: canada_data.py  provinces.py
corona_stats/data/csv/: us_state_capitals.csv
corona_stats/data/us/: current_us_data.py  states.py  us_data.py
corona_stats/plots/: bubble_map.py  pie_chart.py  plotly_bubble_map.py  plotly_plot.py  plotly_vbar_plot.py  vbar_stacked.py
corona_stats/plots/models/: quantile_to_plot.py
corona_stats/templates/: canada.html  canada_plot.html  home.html  plotly_plot.html  us_plot.html
scripts/: bootstrap.sh  update_requirements.sh
